--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <img src="./assets/ceo.png" alt="Hamid Reza Samadi" class="w-72 mx-auto" data-aos="fade-up" data-aos-delay="250"> 
           </div>
 
-          <div class="w-5/6 md:w-1/2 mx-auto text-gray-100 space-y-3 mt-10">
+          <div class="w-5/6 md:w-1/2 mx-auto text-sm md:text-base text-gray-100 space-y-3 mt-10">
             <p data-aos="fade-up" data-aos-delay="350">The accomplished owner of a significant holding, having embarked on a remarkable journey within the manufacturing sector with a resolute determination to shape a brighter future. This aspiration was ignited during his formative years, driving him to not only secure personal success but to lay the groundwork for a prospective family. In 1995, at the young age of 26, he established his inaugural enterprise, starting with a modest workforce of fewer than ten individuals. Over time, his conglomerate has grown to encompass more than 25 distinct companies united under a single banner, collectively employing over four thousand dedicated individuals.</p>
             <p data-aos="fade-up" data-aos-delay="450">Demonstrating a profound commitment to his employees, he regards them as an extended family, and he remains steadfast in his hope for perpetual expansion. However, his benevolence extends beyond his workforce; he has gone beyond the confines of individual employees, founding a hospital and numerous educational institutions under the corporate umbrella. Moreover, he has masterminded entire residential communities in close proximity to the primary manufacturing facility, underscoring his comprehensive dedication to the well-being of those he serves. All of his services are because of his life’s vision: upon recognizing someone's potential, he feels compelled to address all their challenges – be it financial or health-related; to empower and enable them to fully realise their strengths and soar to new heights.</p>
             <p data-aos="fade-up" data-aos-delay="550">His vocation has seamlessly merged with his life's purpose, dedicating each passing minute to nurturing his expansive family—a testament to his extraordinary leadership.</p>
@@ -143,23 +143,23 @@
       <section id="section6" class="text-white overflow-hidden py-16 md:py-32 marquee">
         <div class="flex items-center space-x-14 md:space-x-20 marquee__inner first"> 
 
-          <span class="uppercase font-bold text-[11vw]">Sort</span>
-          <img src="./assets/logo.png" alt="logo" class="w-10 md:w-14 lg:w-16 xl:w-24 object-contain">
+          <span class="uppercase font-bold text-[20vw] md:text-[11vw]">Sort</span>
+          <img src="./assets/logo.png" alt="logo" class="w-16 xl:w-24 object-contain">
 
-          <span class="uppercase font-bold text-[11vw]">Set in Order</span>
-          <img src="./assets/logo.png" alt="logo" class="w-10 md:w-14 lg:w-16 xl:w-24 object-contain">
+          <span class="uppercase font-bold text-[20vw] md:text-[11vw]">Set in Order</span>
+          <img src="./assets/logo.png" alt="logo" class="w-16 xl:w-24 object-contain">
 
-          <span class="uppercase font-bold text-[11vw]">Shine</span>
-          <img src="./assets/logo.png" alt="logo" class="w-10 md:w-14 lg:w-16 xl:w-24 object-contain">
+          <span class="uppercase font-bold text-[20vw] md:text-[11vw]">Shine</span>
+          <img src="./assets/logo.png" alt="logo" class="w-16 xl:w-24 object-contain">
 
-          <span class="uppercase font-bold text-[11vw]">Sustain</span>
-          <img src="./assets/logo.png" alt="logo" class="w-10 md:w-14 lg:w-16 xl:w-24 object-contain">
+          <span class="uppercase font-bold text-[20vw] md:text-[11vw]">Sustain</span>
+          <img src="./assets/logo.png" alt="logo" class="w-16 xl:w-24 object-contain">
 
         </div>
       </section>
 
 
-      <section class="pb-48">
+      <section class="pb-32 md:pb-48">
         <div class="flex justify-center">
           <img src="./assets/logo-big.png" alt="logo" class="w-48 md:w-64" data-aos="fade" data-aos-delay="250">
         </div>
