--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
       <section id="section1" class="section-one">
 
 
-        <div class="logo flex justify-center py-10">
+        <!-- <div class="logo flex justify-center py-10">
           <img src="./assets/logo.png" alt="logo" class="w-32">
-        </div>
+        </div> -->
         <!-- logo -->
 
         <div class="flex justify-center relative mt-20">
           
-          <div class="absolute top-[22%] md:top-[18%] lg:top-[22%] z-[10]">
+          <div class="absolute top-[22%] md:top-[18%] lg:top-[15%] z-[10]">
             <h1 class="text-[5rem] sm:text-[6rem] md:text-[7rem] lg:text-[10rem] xl:text-[11rem] uppercase font-black text-white">SAMADI</h1>
           </div>
 
-          <img src="./assets/globe.png" alt="globe" class="globe" class="w-4/5 md:w-2/3 z-[30]">
+          <img src="./assets/globe.png" alt="globe" class="globe w-4/5 md:w-2/3">
+
         </div>
         <!-- Globe -->
 
@@ -43,7 +44,7 @@
 
       <section id="section2" class="section-two h-[50vh] lg:h-screen flex items-center justify-center">
 
-        <div class="relative leading-none text-white uppercase -z-[2]">
+        <div class="relative leading-none text-white uppercase z-[2]">
           <span class="absolute left-0 bottom-[100%] font-bold text-xl md:text-3xl tracking-wide"> EMPOWERING </span>
           <span class="text-[20vw] md:text-[20vw] font-black" id="globeEnd"> GLOBAL </span>
           <span class="absolute right-0 top-[90%] font-bold  text-xl md:text-3xl tracking-wide"> EXCELLENCE </span>
@@ -67,8 +68,8 @@
             </span>
           </div>
 
-          <div class="ceo-photo">
-            <img src="./assets/ceo.png" alt="Hamid Reza Samadi" class="w-72 mx-auto" data-aos="fade-up" data-aos-delay="250"> 
+          <div class="ceo-photo" id="ceoLogo">
+            <img src="./assets/logo-wihout-ball.png" alt="Hamid Reza Samadi" class="w-72 mx-auto" data-aos="fade-up" data-aos-delay="250"> 
           </div>
 
           <div class="w-5/6 md:w-1/2 mx-auto text-sm md:text-base text-gray-100 space-y-3 mt-10">
@@ -140,7 +141,7 @@
 
 
 
-      <section id="section6" class="text-white overflow-hidden py-16 md:py-32 marquee">
+      <!-- <section id="section6" class="text-white overflow-hidden py-16 md:py-32 marquee">
         <div class="flex items-center space-x-14 md:space-x-20 marquee__inner first"> 
 
           <span class="uppercase font-bold text-[20vw] md:text-[11vw]">Sort</span>
@@ -156,7 +157,7 @@
           <img src="./assets/logo.png" alt="logo" class="w-16 xl:w-24 object-contain">
 
         </div>
-      </section>
+      </section> -->
 
 
       <section class="pb-32 md:pb-48">
