--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="flex justify-center relative mt-20">
           
           <div class="absolute top-[22%] md:top-[18%] lg:top-[15%] z-[10]">
-            <h1 class="text-[5rem] sm:text-[6rem] md:text-[7rem] lg:text-[10rem] xl:text-[11rem] uppercase font-black text-white">SAMADI</h1>
+            <h1 class="pt-32 text-[5rem] sm:text-[6rem] md:text-[7rem] lg:text-[10rem] xl:text-[11rem] uppercase font-black text-white">SAMADI</h1>
           </div>
 
           <img src="./assets/globe.png" alt="globe" class="globe w-4/5 md:w-2/3">
@@ -68,15 +68,14 @@
             </span>
           </div>
 
-          <div class="ceo-photo" id="ceoLogo">
-            <img src="./assets/logo-wihout-ball.png" alt="Hamid Reza Samadi" class="w-72 mx-auto" data-aos="fade-up" data-aos-delay="250"> 
+          <div class="ceo-photo mt-12" id="ceoLogo">
+            <img src="./assets/logo-wihout-ball.png" alt="Hamid Reza Samadi" class="w-56 mx-auto" data-aos="fade-up" data-aos-delay="250"> 
           </div>
 
-          <div class="w-5/6 md:w-1/2 mx-auto text-sm md:text-base text-gray-100 space-y-3 mt-10">
+          <div class="w-5/6 md:w-1/2 mx-auto text-sm md:text-base text-gray-100 space-y-3 mt-16">
             <p data-aos="fade-up" data-aos-delay="350">The accomplished owner of a significant holding, having embarked on a remarkable journey within the manufacturing sector with a resolute determination to shape a brighter future. This aspiration was ignited during his formative years, driving him to not only secure personal success but to lay the groundwork for a prospective family. In 1995, at the young age of 26, he established his inaugural enterprise, starting with a modest workforce of fewer than ten individuals. Over time, his conglomerate has grown to encompass more than 25 distinct companies united under a single banner, collectively employing over four thousand dedicated individuals.</p>
             <p data-aos="fade-up" data-aos-delay="450">Demonstrating a profound commitment to his employees, he regards them as an extended family, and he remains steadfast in his hope for perpetual expansion. However, his benevolence extends beyond his workforce; he has gone beyond the confines of individual employees, founding a hospital and numerous educational institutions under the corporate umbrella. Moreover, he has masterminded entire residential communities in close proximity to the primary manufacturing facility, underscoring his comprehensive dedication to the well-being of those he serves. All of his services are because of his life’s vision: upon recognizing someone's potential, he feels compelled to address all their challenges – be it financial or health-related; to empower and enable them to fully realise their strengths and soar to new heights.</p>
             <p data-aos="fade-up" data-aos-delay="550">His vocation has seamlessly merged with his life's purpose, dedicating each passing minute to nurturing his expansive family—a testament to his extraordinary leadership.</p>
-            <p data-aos="fade-up" data-aos-delay="650">I was thinking for the company's brief we can take some points from here as the company will be basically himself.</p>
           </div>
 
         </div>
@@ -90,11 +89,14 @@
         <div class="md:flex space-y-16 md:space-y-0">
           <div class="w-full text-center flex flex-col space-y-2">
             <span class="text" data-aos="fade-down" data-aos-delay="100">First company found</span>
-            <span class="text-7xl md:text-6xl lg:text-8xl xl:text-9xl font-bold uppercase scroll-counter" data-counter-time="1500">1995</span>
+            <span class="text-7xl md:text-6xl lg:text-8xl xl:text-9xl font-bold uppercase scroll-counter" data-counter-time="1500">1989</span>
           </div>
           <div class="w-full text-center flex flex-col space-y-2">
             <span class="text" data-aos="fade-down" data-aos-delay="200">Number of companies</span>
-            <span class="text-7xl md:text-6xl lg:text-8xl xl:text-9xl font-bold uppercase scroll-counter" data-counter-time="1500">25</span>
+            <span class="text-7xl md:text-6xl lg:text-8xl xl:text-9xl font-bold uppercase -space-x-10">
+              <span data-counter-time="1500" class="scroll-counter" data-counter-time="1500">25</span>
+              <span>+</span>
+            </span>
           </div>
           <div class="w-full text-center flex flex-col space-y-2">
             <span class="text" data-aos="fade-down" data-aos-delay="300">No of employees</span>
@@ -168,9 +170,9 @@
 
       <footer id="section7" class="py-5 border-t text-white flex justify-center border-gray-500">
         <div class="flex flex-col md:flex-row space-y-3 md:space-y-0 md:space-x-16 mx-auto">
-          <p class="w-auto text-center">Tehran - North Africa Boulevard, Taheri Street - No. 8</p>
+          <!-- <p class="w-auto text-center">Tehran - North Africa Boulevard, Taheri Street - No. 8</p> -->
           <a class="w-full md:w-32 hover:underline text-center cursor-pointer" href="mailto:info@samadi.co">info@samadi.co</a>
-          <a class="w-full md:w-32 hover:underline text-center cursor-pointer" href="tel:021-2767000">021-2767000</a>
+          <!-- <a class="w-full md:w-32 hover:underline text-center cursor-pointer" href="tel:021-2767000">021-2767000</a> -->
         </div>
       </footer>
 
