landscape for mobile

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
         <div class="flex justify-center relative mt-20">
           
-          <div class="absolute top-[22%] md:top-[18%] lg:top-[15%] z-[10]">
-            <h1 class="pt-32 text-[5rem] sm:text-[6rem] md:text-[7rem] lg:text-[10rem] xl:text-[11rem] uppercase font-black text-white">SAMADI</h1>
+          <div class="absolute landscape:-top-[5%] top-[0%] landscape:md:-top-[5%] landscape:md:top-[18%] landscape:lg:top-[15%] z-[10]">
+            <h1 class="pt-32 text-[4rem] sm:text-[6rem] md:text-[7rem] lg:text-[10rem] xl:text-[11rem] uppercase font-black text-white">SAMADI</h1>
           </div>
 
           <img src="./assets/globe.png" alt="globe" class="globe w-4/5 md:w-2/3">
