--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
 
           <div class="ceo-photo mt-12" id="ceoLogo">
-            <img src="./assets/logo-wihout-ball.png" alt="Hamid Reza Samadi" class="w-56 mx-auto" data-aos="fade-up" data-aos-delay="250"> 
+            <img src="./assets/logo-wihout-ball.png" alt="Hamid Reza Samadi" class="w-36 md:w-56 mx-auto" data-aos="fade-up" data-aos-delay="250"> 
           </div>
 
           <div class="w-5/6 md:w-1/2 mx-auto text-sm md:text-base text-gray-100 space-y-3 mt-16">
