--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
           <li> <a href="#section2" class="nav_link inline-block w-3 h-3 rounded-full border border-gray-100 hover:bg-white transition-all text-white"></a> </li>
           <li> <a href="#section3" class="nav_link inline-block w-3 h-3 rounded-full border border-gray-100 hover:bg-white transition-all text-white"></a> </li>
           <li> <a href="#section5" class="nav_link inline-block w-3 h-3 rounded-full border border-gray-100 hover:bg-white transition-all text-white"></a> </li>
-          <li> <a href="#section6" class="nav_link inline-block w-3 h-3 rounded-full border border-gray-100 hover:bg-white transition-all text-white"></a> </li>
         </ul>
       </div>
 
@@ -30,8 +29,8 @@
 
         <div class="flex justify-center relative mt-20">
           
-          <div class="absolute landscape:-top-[5%] top-[0%] landscape:md:-top-[5%] landscape:md:top-[18%] landscape:lg:top-[15%] z-[10]">
-            <h1 class="pt-32 text-[4rem] sm:text-[6rem] md:text-[7rem] lg:text-[10rem] xl:text-[11rem] uppercase font-black text-white">SAMADI</h1>
+          <div class="absolute landscape:-top-[5%] top-[0%] md:top-[15%] landscape:md:-top-[5%] landscape:md:top-[18%] landscape:lg:top-[15%] z-[10]">
+            <h1 class="pt-[7rem] text-[4rem] sm:text-[6rem] md:text-[7rem] lg:text-[10rem] xl:text-[11rem] 2xl:text-[15rem] uppercase font-black text-white">SAMADI</h1>
           </div>
 
           <img src="./assets/globe.png" alt="globe" class="globe w-4/5 md:w-2/3">
