--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
 
           <div class="w-5/6 md:w-1/2 mx-auto text-sm md:text-base text-gray-100 space-y-3 mt-16">
-            <p data-aos="fade-up" data-aos-delay="350">The accomplished owner of a significant holding, having embarked on a remarkable journey within the manufacturing sector with a resolute determination to shape a brighter future. This aspiration was ignited during his formative years, driving him to not only secure personal success but to lay the groundwork for a prospective family. In 1995, at the young age of 26, he established his inaugural enterprise, starting with a modest workforce of fewer than ten individuals. Over time, his conglomerate has grown to encompass more than 25 distinct companies united under a single banner, collectively employing over four thousand dedicated individuals.</p>
+            <p data-aos="fade-up" data-aos-delay="350">The accomplished owner of a significant holding, having embarked on a remarkable journey within the manufacturing sector with a resolute determination to shape a brighter future. This aspiration was ignited during his formative years, driving him to not only secure personal success but to lay the groundwork for a prospective family. In 1989, at the young age of 20, he established his inaugural enterprise, starting with a modest workforce of fewer than ten individuals. Over time, his conglomerate has grown to encompass more than 25 distinct companies united under a single banner, collectively employing over four thousand dedicated individuals.</p>
             <p data-aos="fade-up" data-aos-delay="450">Demonstrating a profound commitment to his employees, he regards them as an extended family, and he remains steadfast in his hope for perpetual expansion. However, his benevolence extends beyond his workforce; he has gone beyond the confines of individual employees, founding a hospital and numerous educational institutions under the corporate umbrella. Moreover, he has masterminded entire residential communities in close proximity to the primary manufacturing facility, underscoring his comprehensive dedication to the well-being of those he serves. All of his services are because of his life’s vision: upon recognizing someone's potential, he feels compelled to address all their challenges – be it financial or health-related; to empower and enable them to fully realise their strengths and soar to new heights.</p>
             <p data-aos="fade-up" data-aos-delay="550">His vocation has seamlessly merged with his life's purpose, dedicating each passing minute to nurturing his expansive family—a testament to his extraordinary leadership.</p>
           </div>
@@ -92,13 +92,13 @@
           </div>
           <div class="w-full text-center flex flex-col space-y-2">
             <span class="text" data-aos="fade-down" data-aos-delay="200">Number of companies</span>
-            <span class="text-7xl md:text-6xl lg:text-8xl xl:text-9xl font-bold uppercase -space-x-10">
+            <span class="text-7xl md:text-6xl lg:text-8xl xl:text-9xl font-bold uppercase -space-x-6">
               <span data-counter-time="1500" class="scroll-counter" data-counter-time="1500">25</span>
               <span>+</span>
             </span>
           </div>
           <div class="w-full text-center flex flex-col space-y-2">
-            <span class="text" data-aos="fade-down" data-aos-delay="300">No of employees</span>
+            <span class="text" data-aos="fade-down" data-aos-delay="300">No of direct employees</span>
             <span class="text-7xl md:text-6xl lg:text-8xl xl:text-9xl font-bold uppercase flex items-center justify-center" class="scroll-counter" data-counter-time="1500">
               <span class="scroll-counter" data-counter-time="1500">4000</span>
               <span>+</span>
